projects/los-business/gateway/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-svc
  namespace: los-business-dev
spec:
  ports:
    - port: 9010
      protocol: TCP
      targetPort: 9010
  selector:
    app: gateway
